# godot_arcore

./: .gitignore  .gitmodules  CONTRIBUTORS.md  LICENSE  README.md  SETUP.md  build.gradle  config.gradle  generate.py  settings.gradle  settings.gradle.kts
.github/workflows/: build-on-push.yml
.github/workflows/scripts/: clang_format.sh  file_format.sh
demo/: .gitignore  Anchor.tscn  Main.gd  Main.tscn  cube_6.png.import  export_presets.cfg  project.godot
demo/addons/godot-arcore/: ARCore.gd  ARCore.tscn
demo/addons/godot_arcore/: ARCore.gd  ARCore.tscn  CHANGES.md  LICENSE
gradle/wrapper/: gradle-wrapper.properties
plugin/: CMakeLists.txt  build.gradle  build.gradle.kts  gdarcore.gdap
plugin/demo/: MeshInstance3D.gd  export_presets.cfg  main.gd  main.tscn  main3D.gd  main3D.tscn  openxr_action_map.tres  project.godot  ruler.blend  ui.gd  ui.tscn
plugin/export_scripts_template/: ARCoreInterface.gd  export_plugin.gd  plugin.cfg  plugin.gdextension
plugin/libs/: api.json
plugin/src/main/: AndroidManifest.xml
plugin/src/main/assets/addons/godot_arcore/: godot_arcore.gdextension  godot_arcore.gdnlib
plugin/src/main/cpp/: android_util.h  ar_utils.h  arcore_interface.cpp  arcore_interface.h  arcore_wrapper.cpp  arcore_wrapper.h  background_renderer.cpp  background_renderer.h  common.h  instances_renderer.cpp  instances_renderer.h  plane_renderer.cpp  plane_renderer.h  plugin_jni.cpp  point_cloud_renderer.cpp  point_cloud_renderer.h  register_types.cpp  register_types.h  utils.h
plugin/src/main/cpp/gdnative/: godot_arcore.cpp  godot_arcore.h
plugin/src/main/cpp/include/: README.md
plugin/src/main/cpp/jni/: arcore_jni.cpp  arcore_plugin_wrapper.cpp  arcore_plugin_wrapper.h  jni_util.h
plugin/src/main/java/org/godotengine/plugin/android/arcore/: ARCorePlugin.kt
plugin/src/main/java/org/godotengine/plugin/arcore/: ARCorePlugin.java  ARCoreSetupActivity.java  ARCoreUtil.java
plugin/src/main/res/values/: strings.xml
